--- a/app/core/static/core/css/blendInstructionEditor.css
+++ b/app/core/static/core/css/blendInstructionEditor.css
@@ -1,17 +1,22 @@
 input[name*='step_number'] {
-    width: 30px;
-    height: 24px;
-    background-color: transparent;
-    border: none;
-    text-align: center;
+  width: 30px;
+  height: 24px;
+  background-color: transparent;
+  border: none;
+  text-align: center;
 }
 
+.tbl-cell-step_number {
+  cursor: move;
+}
+
+
 input[name*='step_description'] {
-    width: 55rem;
-    height: auto;
-    background-color: transparent;
-    vertical-align: top;
-    overflow: auto;
+  width: 55rem;
+  height: auto;
+  background-color: transparent;
+  vertical-align: top;
+  overflow: auto;
 }
 
 input::-webkit-outer-spin-button,
@@ -35,4 +40,5 @@ td {
     to {
       opacity: 0;
     }
-  }
+}
+
