Begin work on graphical representation of tank levels

--- a/app/core/templates/core/tanklevelsmsr.html
+++ b/app/core/templates/core/tanklevelsmsr.html
@@ -36,6 +36,7 @@
             </thead>
         </table>
     </div>
+    <canvas id="MSRtankcanvas"></canvas>
     <p id="hartPage" hidden=true></p>
     <script type="module" src="{% static 'core/js/pageModules/tankLevelsMSR.js' %}"></script>
 {% endblock content %}
