Update the links on kpklauncher

--- a/app/kpklauncher/templates/kpklauncher/launcher.html
+++ b/app/kpklauncher/templates/kpklauncher/launcher.html
@@ -254,26 +254,26 @@
     <div class="row g-1 py-2 row-cols-1 row-cols-lg-3">
       <!-- Blending Schedule -->
       <div class="feature col">
-        <a href="https://adminkinpak.sharepoint.com/sites/BLND/Shared%20Documents/03%20Projects/Blending%20Schedule/Blending-Schedule/BlendingSchedule.xlsb">
+        <a href="/core/blend-schedule?blend-area=all">
           <div class="feature-icon d-inline-flex align-items-center justify-content-center bg-primary bg-gradient text-white fs-2 mb-3">
             <svg class="bi" width="1em" height="1em"><use xlink:href="#calendar2-range-fill"/></svg>
           </div>
         </a>
         <h2>Blending Schedule</h2>
-        <a href="https://adminkinpak.sharepoint.com/sites/BLND/Shared%20Documents/03%20Projects/Blending%20Schedule/Blending-Schedule/BlendingSchedule.xlsb" class="icon-link d-inline-flex align-items-center">
+        <a href="/core/blend-schedule?blend-area=all" class="icon-link d-inline-flex align-items-center">
           Open Blending Schedule
           <svg class="bi" width="1em" height="1em"><use xlink:href="#chevron-right"/></svg>
         </a>
       </div>
       <!-- Lot Number Generator -->
       <div class="feature col">
-        <a href="https://adminkinpak.sharepoint.com/sites/BLND/Shared%20Documents/01%20Spreadsheet%20Tools/Blending%20Lot%20Number%20Generator/LotNumGenerator-Prod/Blending%20Lot%20Number%20Generator.xlsb">
+        <a href="/core/lot-num-records">
           <div class="feature-icon d-inline-flex align-items-center justify-content-center bg-primary bg-gradient text-white fs-2 mb-3">
             <svg class="bi" width="1em" height="1em"><use xlink:href="#table"/></svg>
           </div>
         </a>
         <h2>Lot Number Generator</h2>
-        <a href="https://adminkinpak.sharepoint.com/sites/BLND/Shared%20Documents/01%20Spreadsheet%20Tools/Blending%20Lot%20Number%20Generator/LotNumGenerator-Prod/Blending%20Lot%20Number%20Generator.xlsb" class="icon-link d-inline-flex align-items-center">
+        <a href="/core/lot-num-records" class="icon-link d-inline-flex align-items-center">
           Open Lot Number Generator
           <svg class="bi" width="1em" height="1em"><use xlink:href="#chevron-right"/></svg>
         </a>
@@ -299,7 +299,7 @@
     </div>
   </div>
 
-  <div class="container px-4 py-5" id="featured-3">
+  {% comment %} <div class="container px-4 py-5" id="featured-3">
     <div class="row g-1 py-2 row-cols-1 row-cols-lg-3">
       <!-- Issue Sheet Gen -->
       <div class="feature col">
@@ -342,7 +342,7 @@
       </div>
 
     </div>
-  </div>
+  </div> {% endcomment %}
 
   <div class="b-example-divider"></div>
 
