Revise report logic and add itemrunwhatif.

--- a/app/core/templates/core/reportcenter.html
+++ b/app/core/templates/core/reportcenter.html
@@ -26,7 +26,8 @@
                             <option reportval="Max-Producible-Quantity" class="reportOption">Max Producible Quantity</option>
                             <option reportval="Purchase-Orders" class="reportOption">Purchase Orders</option>
                             <option reportval="Bill-Of-Materials" class="reportOption">Bill Of Materials</option>
-                            <option reportval="Production-What-If" class="reportOption">Production What-If</option>
+                            <option reportval="Blend-What-If" class="reportOption">Blend What-If</option>
+                            <option reportval="Item-Component-What-If" class="reportOption">Item Component What-If</option>
                         </select>
                     </td>
                 </tr>
@@ -48,7 +49,7 @@
                 </tr>
                 <tr id="itemQuantityRow" style="display:none;">
                     <td>
-                        <label for="id_blend_quantity">Enter Item Quantity:</label>
+                        <label for="id_item_quantity">Enter Item Quantity:</label>
                     </td>
                     <td>
                         <input type="number" name="item_quantity" maxlength="100" required="" id="id_item_quantity">
