--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-
+{% load static %}
 {% block content %}
 
     <div class='text-left'>
@@ -11,7 +11,14 @@
     <a class="btn btn-secondary" href="/core/forklift-checklist">Create New Forklift Log</a>
   {% else %}
     <p class='text-left'>You are not logged in.</p>
-    <a href="{% url 'login' %}">Log In</a>
+    <br>
+    <h2 class='text-center'>Login</h2>
+    <form method="post" action="/accounts/login/" class='text-center'>
+      {% csrf_token %}
+      <p><label for="id_username">Username:</label> <input type="text" name="username" autofocus="" autocapitalize="none" autocomplete="username" maxlength="150" required="" id="id_username"></p>
+      <p><label for="id_password">Password:</label> <input type="password" name="password" autocomplete="current-password" required="" id="id_password"></p>
+      <button type="submit">Log In</button>
+    </form>
   {% endif %}    
 
 {% endblock content %}
