--- a/app/core/templates/core/lotnumerrorform.html
+++ b/app/core/templates/core/lotnumerrorform.html
@@ -1,7 +1,7 @@
-{% extends base.html %}
+{% extends 'base.html' %}
 {% load static %}
 {% block scripts %}
-    <link rel="stylesheet" type="text/css" href="{% static 'core/css/addLotNumModal.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'core/css/addLotNumError.css' %}">
 {% endblock scripts %}
 {% block content %}
     <h1>Please correct errors.</h1>
