Enhance shortage flagging on blendshortages.

--- a/app/core/static/core/css/blendShortages.css
+++ b/app/core/static/core/css/blendShortages.css
@@ -40,3 +40,8 @@ tr[needsCount="needsCount"] {
 .advanceRow {
     background-color: rgb(255, 128, 192) !important;
 }
+
+.shortageFlag {
+    color: red;
+    font-weight: bold;
+}
