Remove columns on blendshortages.

--- a/app/core/templates/core/blendshortages.html
+++ b/app/core/templates/core/blendshortages.html
@@ -25,8 +25,6 @@
                     {% if user.is_staff %}<th scope="col" class="text-center"></th>{% endif %}
                     <th scope="col" class="text-center">Blend</th>
                     <th scope="col" class="text-center">Description</th>
-                    <th scope="col" class="text-center">Last Count</th>
-                    <th scope="col" class="text-center">Last Txn</th>
                     <th scope="col" class="text-center">First Shortage</th>
                     <th scope="col" class="text-center">Line</th>
                     <th scope="col" class="text-center">1wk Short</th>
@@ -97,23 +95,7 @@
                             </div>
                         </span>
                     </td>
-                    <td>{{ item.component_item_description }}</td>
-                    <td>                            
-                        <span title="{{ item.last_count_quantity|floatformat:0 }} gallons">{{ item.last_count_date }}</span>
-                    </td>
-                    <td>
-                        {% if item.last_txn_code == "II" %}
-                            <span title="{{ item.last_txn_code }} - Inventory Adjustment">{{ item.last_txn_date }}</span>
-                        {% elif item.last_txn_code == "BI" %}
-                            <span title="{{ item.last_txn_code }} - Run for Production">{{ item.last_txn_date }}</span>
-                        {% elif item.last_txn_code == "BR" %}
-                            <span title="{{ item.last_txn_code }} - Blend Produced">{{ item.last_txn_date }}</span>
-                        {% elif item.last_txn_code == "PO" %}
-                            <span title="{{ item.last_txn_code }} - Shipment Received">{{ item.last_txn_date }}</span>
-                        {% else %}
-                            <b>{{ item.last_txn_code }}</b>
-                        {% endif %}
-                    </td>
+                    <td><span title="Counted {{ item.last_count_quantity|floatformat:0 }} gal on {{ item.last_count_date }}. Last transaction: {{ item.last_txn_code }} - {{ item.last_txn_date }}.">{{ item.component_item_description }}</span></td>
                     <td>{{ item.start_time|floatformat:2 }}</td>
                     <td class ="text-center">
                         {% if item.prod_line == 'Dm' %}
@@ -131,7 +113,7 @@
                     <td class="{% if item.total_shortage > item.max_producible_quantity %}shortageFlag{% endif %}">{{ item.total_shortage|floatformat:2 }} gal</td>
                     <td class="text-center lotNumCell">
                         <button class="btn btn-secondary lotNumButton" 
-                            data-bs-toggle="modal" data-bs-target="#addLotNumModal"
+                            data-bs-toggle="modal" data-bs-target="#addLotNumModal" 
                             data-itemcode="{{ item.component_item_code }}" data-desc="{{ item.component_item_description }}" 
                             data-totalqty="{{ item.total_shortage }}" data-line="Prod" data-desk="Desk_1">
                             +
