Add url, views function, & template.

--- a/app/core/templates/core/batchissuetable.html
+++ b/app/core/templates/core/batchissuetable.html
@@ -22,7 +22,7 @@
                     
                 </tr>
             </thead>
-            {% for run in prod_runs_this_line %}
+            {% for run in upcoming_runs %}
                 <tr>
                     <td>{{ run.item_code }}</td>
                     <td>{{ run.component_item_code }}</td>
