--- a/app/core/templates/core/batchissuetable.html
+++ b/app/core/templates/core/batchissuetable.html
@@ -1,43 +1,64 @@
-{% extends 'base.html' %}
-
+{% load static %}
+<link href="https://code.jquery.com/ui/1.13.1/themes/cupertino/jquery-ui.css" rel="stylesheet" type="text/css" /> 
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+<script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>  
+<script src="https://code.jquery.com/ui/1.13.1/jquery-ui.min.js" integrity="sha256-eTyxS0rkjpLEo16uXTS0uVCS4815lc40K2iVpWDvdSY=" crossorigin="anonymous"></script>  
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+<link rel="stylesheet" type="text/css" href="{% static 'core/css/base.css' %}">
 
 {% block title %}<title>Batch Table</title>{% endblock %}
 
+{% block scripts %}
+    <link rel="stylesheet" type="text/css" href="{% static 'core/css/batchIssueTable.css' %}">
+{% endblock scripts %}
+
 {% block content %}
-    <div class='text-center'>
-        <h1>All Lot Numbers For {{ line }} Runs</h1>
-    </div>
-    <br>
-    <div class="table-responsive-sm">
-        <table class="table text-left table-bordered">
-            <thead class="thead-dark" style="position: sticky; top: 55px; z-index: 2 !important;">
-                <tr>
-                    <th scope="col">Bill No.</th>
-                    <th scope="col">Blend</th>
-                    <th scope="col">Description</th>
-                    <th scope="col">Run Qty</th>
-                    <th scope="col">Start Time</th>
-                    <th scope="col">Batches Issued</th>
-                    <th scope="col">Total On Hand</th>
-                    
-                </tr>
-            </thead>
-            {% for run in upcoming_runs %}
-                <tr>
-                    <td>{{ run.item_code }}</td>
-                    <td>{{ run.component_item_code }}</td>
-                    <td>{{ run.component_item_description }}</td>
-                    <td>{{ run.adjustedrunqty|floatformat:2 }}</td>
-                    <td>{{ run.starttime|floatformat:5 }}</td>
-                    <td>{% if run.batchnum1 == "n/a" %} - {% else %} <b>{{ run.batchnum1 }}</b>: {{ run.batchqty1 }} gal<br>{% endif %}
-                        {% if run.batchnum2 == "n/a" %}{% else %} <b>{{ run.batchnum2 }}</b>: {{ run.batchqty2 }} gal<br>{% endif %}
-                        {% if run.batchnum3 == "n/a" %}{% else %} <b>{{ run.batchnum3 }}</b>: {{ run.batchqty3 }} gal<br>{% endif %}
-                        {% if run.batchnum4 == "n/a" %}{% else %} <b>{{ run.batchnum4 }}</b>: {{ run.batchqty4 }} gal<br>{% endif %}
-                        {% if run.batchnum5 == "n/a" %}{% else %} <b>{{ run.batchnum5 }}</b>: {{ run.batchqty5 }} gal<br>{% endif %}
-                        {% if run.batchnum6 == "n/a" %}{% else %} <b>{{ run.batchnum6 }}</b>: {{ run.batchqty6 }} gal{% endif %}</td>
-                    <td>{{ run.qtyonhand|floatformat:2 }}</td>
-                </tr>
-            {% endfor %}
-        </table>
+    <div class="contentarea text-center">
+        <div class='text-center'>
+            <h1>BLENDING BATCH NUMBERS</h1>
+            <h2>{{ prod_line }}
+        </div>
+        <br>
+        <div class="table-responsive-sm">
+            <table class="table text-left table-bordered">
+                <thead class="thead-dark" style="position: sticky; top: 55px; z-index: 2 !important;">
+                    <tr>
+                        {% comment %} <th scope="col">Bill No.</th>
+                        <th scope="col">PO Number</th> {% endcomment %}
+                        <th scope="col" class="text-center">Blend</th>
+                        <th scope="col" class="text-center">Description</th>
+                        {% comment %} <th scope="col">Run Qty</th> {% endcomment %}
+                        <th scope="col" class="text-center">Start Time</th>
+                        <th scope="col" class="text-center">Batches Issued</th>
+                        <th scope="col" class="text-center">On Hand</th>
+                    </tr>
+                </thead>
+                {% for run in runs_this_line %}
+                    <tr>
+                        {% comment %} <td>{{ run.item_code }}</td>
+                        <td>{{ run.po_number }}</td> {% endcomment %}
+                        <td>{{ run.component_item_code }}</td>
+                        <td class="itemDescriptionCell">{{ run.component_item_description }}</td>
+                        {% comment %} <td>{{ run.run_component_qty|floatformat:2 }}</td> {% endcomment %}
+                        <td>{{ run.start_time|floatformat:2 }}</td>
+                        <td class="{{ run.lot_numbers.0.0 }} batchNumCell">
+                            {% if run.lot_numbers.0.0 %}<b>{{ run.lot_numbers.0.0 }}</b>: {{ run.lot_numbers.0.1 }}<br>{% else %}{%endif%}
+                            {% if run.lot_numbers.1.0 %}<b>{{ run.lot_numbers.1.0 }}</b>: {{ run.lot_numbers.1.1 }}<br>{% else %}{%endif%}
+                            {% if run.lot_numbers.2.0 %}<b>{{ run.lot_numbers.2.0 }}</b>: {{ run.lot_numbers.2.1 }}<br>{% else %}{%endif%}
+                            {% if run.lot_numbers.3.0 %}<b>{{ run.lot_numbers.3.0 }}</b>: {{ run.lot_numbers.3.1 }}<br>{% else %}{%endif%}
+                            {% if run.lot_numbers.4.0 %}<b>{{ run.lot_numbers.4.0 }}</b>: {{ run.lot_numbers.4.1 }}<br>{% else %}{%endif%}
+                            {% if run.lot_numbers.5.0 %}<b>{{ run.lot_numbers.5.0 }}</b>: {{ run.lot_numbers.5.1 }}<br>{% else %}{%endif%}
+                            {% if run.lot_numbers.6.0 %}<b>{{ run.lot_numbers.6.0 }}</b>: {{ run.lot_numbers.6.1 }}<br>{% else %}{%endif%}
+                            {% if run.lot_numbers.7.0 %}<b>{{ run.lot_numbers.7.0 }}</b>: {{ run.lot_numbers.7.1 }}<br>{% else %}{%endif%}
+                            {% if run.lot_numbers.8.0 %}<b>{{ run.lot_numbers.8.0 }}</b>: {{ run.lot_numbers.8.1 }}<br>{% else %}{%endif%}
+                            {% if run.lot_numbers.9.0 %}<b>{{ run.lot_numbers.9.0 }}</b>: {{ run.lot_numbers.9.1 }}<br>{% else %}{%endif%}
+                            {% if run.lot_numbers.10.0 %}<b>{{ run.lot_numbers.10.0 }}</b>: {{ run.lot_numbers.10.1 }}<br>{% else %}{%endif%}
+                            {% if run.lot_numbers.11.0 %}<b>{{ run.lot_numbers.11.0 }}</b>: {{ run.lot_numbers.11.1 }}<br>{% else %}{%endif%}
+                        </td>
+                        <td>{{ run.component_on_hand_qty|floatformat:2 }}</td>
+                    </tr>
+                {% endfor %}
+            </table>
+        </div>
     </div>
 {% endblock content %}
