Add issue date to batchissuetable.

--- a/app/core/templates/core/batchissuetable.html
+++ b/app/core/templates/core/batchissuetable.html
@@ -16,7 +16,7 @@
     <div class="contentarea text-center">
         <div class='text-center'>
             <h1>BLENDING BATCH NUMBERS</h1>
-            <h2>{{ prod_line }}
+            <h2>{{ prod_line }} - {{ issue_date }}</h2>
         </div>
         <br>
         <div class="table-responsive-sm">
