--- a/app/core/templates/core/batchissuetable.html
+++ b/app/core/templates/core/batchissuetable.html
@@ -15,7 +15,7 @@
 {% block content %}
     <div class="contentarea text-center">
         <div class='text-center'>
-            <h1>BLENDING BATCH NUMBERS</h1>
+            <h1>BLENDING LOT NUMBERS</h1>
             <h2>{{ prod_line }} - {{ issue_date }}</h2>
         </div>
         <br>
